# SystemdSvcStatus

./: .gitignore  LICENSE  README.md  pyproject.toml  sys_desk_notif_d.py  sys_svc_watcher.py
src/mirfatif/systemd_svc_status/: list_systemd_svc.py  systemd_svc_watcher.py
src/mirfatif/systemd_svc_status/etc/systemd-svc-watcher/: ignore.list
src/mirfatif/systemd_svc_status/etc/systemd/system/: systemd_svc_watcher.service
src/mirfatif/systemd_svc_status/etc/systemd/user/: systemd_svc_watcher.service
